# ezsingbox

./: .dockerignore  Cargo.toml  Dockerfile  IFLOW.md  client.json  config.json  ezsingbox-v0.1.13-x86_64-linux-musl
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  docker.yml  release.yml
src/: AGENTS.md  commands.rs  config.rs  env.rs  main.rs  protocol.rs  sharelink.rs  utils.rs
src/autoconfig/: autoByDefault.rs  autoanytls.rs  autohy2.rs  autotuic.rs  autovless.rs  mod.rs  tools.rs
src/dns/: dns.rs  mod.rs
src/singboxconfig/: full.rs  lib.rs  mod.rs
src/singboxconfig/inbound/: anytls.rs  hysteria2.rs  mod.rs  tuic.rs  vless.rs
src/singboxconfig/outbound/: anytls.rs  mod.rs
src/singboxconfig/shared/: dial.rs  dns01_challenge.rs  listen.rs  mod.rs  multiplex.rs  tls.rs  v2ray.rs
src/singboxconfig/types/: domain_strategy.rs  duration.rs  mod.rs  network_strategy.rs  routing_mark.rs  string_or_array.rs  user.rs
src/参考/: test.sh
