[package]
name = "ezsingbox"
version = "0.1.15"
edition = "2024"

[dependencies]
base64 = "0.22"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
ureq = "3"
uuid = { version = "1.19.0", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# 优化配置
[profile.release]
opt-level = "z"        # 优化文件大小
lto = true             # 链接时优化
codegen-units = 1      # 单个代码生成单元，更好的优化
strip = true           # 自动剥离符号
panic = "abort"        # panic 时直接中止，减小二进制大小
